--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,16 @@
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="random_word_generator" />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="persistent_random_word_generator"
+    />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>random_word_generator</title>
+    <title>persistent_random_word_generator</title>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
